remove open controller
