# src/routes/open.route.js
@@ -1,9 +1,0 @@
-var express = require('express');
-var router = express.Router();
-
-const openController = require('../controller/open.controller');
-
-router.post("/contact", openController.contact);
-
-module.exports = router;
-
